feat(ai): harden production-grade AI decision boundary and single-call batched evaluation (Sprint 7.2)